file: preserve mode on put

this prevents us from losing owner/group or mode on overwriting put
operations

BUG: 471539
(cherry picked from commit b939a68f166db3d29bb900884d713084cc415751)